// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag renders a flag with a custom stylePreset 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  cursor: default;
  color: #471e79;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #471e79;
  color: #471e79;
}

<div
    class="emotion-2"
    data-testid="flag"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        Text
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with no paddings 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 0;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  cursor: default;
  color: #471e79;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #471e79;
  color: #471e79;
}

<div
    class="emotion-2"
    data-testid="flag"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        Text
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a minimal flag with an icon 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-4 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 0;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  cursor: default;
  color: #471e79;
}

.emotion-4 svg {
  width: 16px;
  height: 16px;
}

.emotion-4 svg {
  fill: #471e79;
  color: #471e79;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  display: inline-block;
}

<div
    class="emotion-4"
    data-testid="flag"
  >
    <div
      class="emotion-3"
    >
      <div
        class="emotion-1"
      >
        <svg
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title>
            Email icon
          </title>
          <path
            d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
          />
        </svg>
      </div>
      <div
        class="emotion-1"
      >
        Text
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a solid flag with an icon 1`] = `
<DocumentFragment>
  .emotion-4 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  cursor: default;
  background-color: #503b8c;
  color: #FFFFFF;
}

.emotion-4 svg {
  width: 16px;
  height: 16px;
}

.emotion-4 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  display: inline-block;
}

<div
    class="emotion-4"
    data-testid="flag"
  >
    <div
      class="emotion-3"
    >
      <div
        class="emotion-1"
      >
        <svg
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title>
            Email icon
          </title>
          <path
            d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
          />
        </svg>
      </div>
      <div
        class="emotion-1"
      >
        Text
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flag renders with Large size 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  cursor: default;
  background-color: #503b8c;
  color: #FFFFFF;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

<div
    class="emotion-2"
    data-testid="flag"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        Text
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flag renders with Small size 1`] = `
<DocumentFragment>
  .emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  cursor: default;
  background-color: #503b8c;
  color: #FFFFFF;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

<div
    class="emotion-2"
    data-testid="flag"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        Text
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flag renders with default styles 1`] = `
<DocumentFragment>
  .emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  cursor: default;
  background-color: #503b8c;
  color: #FFFFFF;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

<div
    class="emotion-2"
    data-testid="flag"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        Text
      </div>
    </div>
  </div>
</DocumentFragment>
`;
